Migrates the code to target Java 21 and migrates tests to Jupiter.